[package]
name = "vyges-geom"
version = "0.1.14"
edition = "2021"
description = "Shared layout geometry: axis-aligned rectangle primitives + a uniform-grid spatial index (RegionIndex) for region / overlap / spacing-halo queries. Std-only, the geometry substrate the Vyges layout-side engines share."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/geom"

# std-only (no external dependencies) so it builds/tests offline.

[lib]
name = "vyges_geom"
path = "src/lib.rs"
